# py3dep

./: .codecov.yml  .coveragerc  .deepsource.toml  .gitattributes  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.rst  HISTORY.rst  MANIFEST.in  Makefile  README.rst  conftest.py  noxfile.py  pyproject.toml  requirements.txt  setup.cfg  setup.py  versioneer.py
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug-report.md  bugreport.yml
.github/workflows/: codeql-analysis.yml  lint.yml  python-publish.yml  release.yml  test.yml
ci/requirements/: doc.yml  environment-dev.yml  environment.yml  py3.6.yml  py3.7.yml  py3.8.yml  py3.9.yml
conda.recipe/: meta.yaml
docs/: conf.py  index.rst  modules.rst  py3dep.rst
py3dep/: __init__.py  _version.py  cli.py  exceptions.py  print_versions.py  py3dep.py  utils.py
src/py3dep/: __init__.py  exceptions.py  geoops.py  py3dep.py  utils.py
tests/: test_exceptions.py  test_py3dep.py  test_py3dp.py
