[metadata]
name = py3dep
description = Access USGS 3DEP database and get data such as elevation in the US
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/cheginit/py3dep
author = Taher Chegini
author_email = cheginit@gmail.com
license = MIT
license_file = LICENSE
platforms = any
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Scientific/Engineering
project_urls =
    Issues = https://github.com/cheginit/py3dep/issues
    CI = https://github.com/cheginit/py3dep/actions
    Changelog = https://github.com/cheginit/py3dep/blob/main/HISTORY.rst

[options]
packages = py3dep
install_requires =
    cytoolz
    numpy
    pygeoogc
    pygeoutils
    rasterio
    shapely
    xarray
python_requires = >=3.7
include_package_data = True
zip_safe = False

[options.packages.find]
include = py3dep, py3dep.*

[options.entry_points]
console_scripts =
    py3dep = py3dep.cli:main

[options.extras_require]
cache =
    requests-cache
test =
    flaky
    pytest
    pytest-xdist

[tool:pytest]
python_files = test_*.py
testpaths = tests
markers =
    flaky: flaky tests
    network: tests requiring a network connection
    slow: slow tests

[flake8]
ignore =
    E203 # whitespace before ':' - doesn't work well with black
    E402 # module level import not at top of file
    E501 # line too long - let black worry about that
    E731 # do not assign a lambda expression, use a def
    W503 # line break before binary operator
    D107 # no need to add docstring for __init__
    D105 # no need to add docstring to magic methods
exclude =
    .eggs
    docs/*.py
    __init__.py
    .ipynb_checkpoints
    tests/*.py

[darglint]
strictness = short
docstring_style = numpy
ignore = DAR401,DAR103
ignore_regex = ^_(.*)

[isort]
profile = black
default_section = THIRDPARTY
known_first_party = py3dep
multi_line_output = 3
include_trailing_comma = True
force_grid_wrap = 0
use_parentheses = True
line_length = 100

[mypy]
allow_redefinition = false
check_untyped_defs = true
ignore_errors = false
ignore_missing_imports = true
implicit_reexport = false
local_partial_types = true
strict_optional = true
strict_equality = true
no_implicit_optional = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
warn_unreachable = true
warn_no_return = true

[mypy-numpy.*]
ignore_missing_imports = True

[mypy-xarray.*]
ignore_missing_imports = True

[mypy-pytest.*]
ignore_missing_imports = True

[mypy-rasterio.*]
ignore_missing_imports = True

[mypy-scipy.*]
ignore_missing_imports = True

[mypy-setuptools]
ignore_missing_imports = True

[mypy-owslib.*]
ignore_missing_imports = True

[mypy-pyproj.*]
ignore_missing_imports = True

[mypy-urllib3.*]
ignore_missing_imports = True

[mypy-shapely.*]
ignore_missing_imports = True

[aliases]
test = pytest

[pytest-watch]
nobeep = True

[bdist_wheel]
universal = 1
